--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -17,7 +17,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
-            <a class="nav-link" href="{% url 'pets index' %}">Home</a>
+            <a class="nav-link" href="{% url 'index' %}">Home</a>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'pets index' %}">All pet photos</a>
             </li>
