--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -28,7 +28,7 @@
                 <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
+                <a class="nav-link" href="{% url 'signup user' %}">Sign Up</a>
             </li>
         </ul>
     </div>
