--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -1,4 +1,6 @@
-extends index.html
+{% extends 'shared/base.html' %}
+{% block content %}
+
   <div class="text-center">
     <h1>Hello, profile_user!</h1>
     <h5>This is your profile</h5>
@@ -10,7 +12,7 @@ extends index.html
     <hr>
     if pets
     <h2 class='text-center'>These are you pet photos</h2>
-  <div class="row">        
+  <div class="row">
         <div class="row">
         for pet in pets
         <div class="col-lg-4">
@@ -31,3 +33,4 @@ extends index.html
     <h2>You have no pets</h2>
     <a href="url to pet create" class="btn btn-success">Add Pet Photo</a>
   </div>
+{% endblock %}
