--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,10 +1,12 @@
-extends index.html
-
-
-<div class="container">
-    <form class="w-50 m-auto" method="post" style="border: 1px solid grey; margin: 10% 0%; padding: 5% 5%" action="url to login">
-      <h2>Login</h2>
-      form
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
-</div>
+{% extends 'shared/base.html' %}
+{% block content %}
+    <div class="container">
+        <form class="w-50 m-auto" method="post" style="border: 1px solid grey; margin: 10% 0%; padding: 5% 5%"
+              action="{% url 'login' %}">
+            <h2>Login</h2>
+            {{ form }}
+            {% csrf_token %}
+            <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+    </div>
+{% endblock %}
