--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -1,36 +1,52 @@
 {% extends 'shared/base.html' %}
 {% block content %}
 
-  <div class="text-center">
-    <h1>Hello, profile_user!</h1>
-    <h5>This is your profile</h5>
-    <img class="rounded-circle mb-3" src="profile_picture_url" alt="Generic placeholder image" width="140" height="140">
-    <div class="w-50 m-auto">
-      form
-    </div>
-  </div>
-    <hr>
-    if pets
-    <h2 class='text-center'>These are you pet photos</h2>
-  <div class="row">
-        <div class="row">
-        for pet in pets
-        <div class="col-lg-4">
-            <div class="card" style="width: 18rem;">
-                <img src="{{p.image.url}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">pet_type pet_name, Age: pet_age</h5>
-                    <p class="card-text">pet_description</p>
-                    <p class="card-text"><strong>Owner: pet_user</strong></p>
-                    <a href="url to pet details" class="btn btn-primary">See details</a>
-                </div>
-            </div>
+    <div class="text-center">
+        <h1>Hello, {{ profile_user.username }}!</h1>
+        <h5>This is your profile</h5>
+        {% if profile.profile_picture %}
+            <img class="rounded-circle mb-3" src="{{ profile.profile_picture.url }}" alt="Generic placeholder image"
+                 width="140"
+                 height="140">
+        {% else %}
+            <img class="rounded-circle mb-3"
+                 src="https://moonvillageassociation.org/wp-content/uploads/2018/06/default-profile-picture1.jpg"
+                 alt="Generic placeholder image"
+                 width="140"
+                 height="140">
+        {% endif %}
+        <div class="w-50 m-auto">
+            <form action="{% url 'current user profile' %}" method="POST" enctype="multipart/form-data">
+                {{ form }}
+                {% csrf_token %}
+                <button class="btn btn-primary">Upload</button>
+            </form>
         </div>
     </div>
-  </div>
-  else
-  <div class="text-center">
-    <h2>You have no pets</h2>
-    <a href="url to pet create" class="btn btn-success">Add Pet Photo</a>
-  </div>
+    <hr>
+    {% if pets %}
+        <h2 class='text-center'>These are you pet photos</h2>
+        <div class="row">
+            <div class="row">
+                {% for pet in pets %}
+                    <div class="col-lg-4">
+                        <div class="card" style="width: 18rem;">
+                            <img src="{{ pet.image.url }}" class="card-img-top" alt="Img of {{ pet.name }}">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ pet.type }} {{ pet.name }}, Age: {{ pet.age }}</h5>
+                                <p class="card-text">{{ pet.description }}</p>
+                                <p class="card-text"><strong>Owner: {{ pet.user.user.username }}</strong></p>
+                                <a href="{% url 'pets details' pet.id %}" class="btn btn-primary">See details</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    {% else %}
+        <div class="text-center">
+            <h2>You have no pets</h2>
+            <a href="{% url 'pets create' %}" class="btn btn-success">Add Pet Photo</a>
+        </div>
+    {% endif %}
 {% endblock %}
