--- a/templates/pet_detail.html
+++ b/templates/pet_detail.html
@@ -10,18 +10,28 @@
                     <h5><u>Type:</u> {{ pet.type }}</h5>
                     <h5><u>Name:</u> {{ pet.name }}</h5>
                     <h5><u>Age:</u> {{ pet.age }}</h5>
+                    <h5><u>Owner:</u> <a href="{% url 'user profile' pet.user.user_id %}">{{ pet.user.user.username }}</a></h5>
                 </div>
                 <p class="mt-2">Description: {{ pet.description }}</p>
-                <a href="{% url 'pets edit' pet.id %}" class="btn btn-success">Edit</a>
-                <a href="{% url 'pets delete' pet.id %}" class="btn btn-danger">Delete</a>
-                <a href="{% url 'pets likes' pet.id %}"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                {% if permissions %}
+                    <a href="{% url 'pets edit' pet.id %}" class="btn btn-success">Edit</a>
+                    <a href="{% url 'pets delete' pet.id %}" class="btn btn-danger">Delete</a>
+                {% endif %}
+                {% if like_comment_permissions %}
+                    {% if has_liked %}
+                        <a href="{% url 'pets likes' pet.id %}"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
+                    {% else %}
+                        <a href="{% url 'pets likes' pet.id %}"><i class="fa fa-heart" aria-hidden="true"></i></a>
+                    {% endif %}
+                {% endif %}
                 <p class="mt-2">Likes: {{ pet.like_set.count }}</p>
             </div>
         </div>
         <div class="d-block" style="background-color: #f1e3e3; padding:2%">
-            {% if pet.comment_set.count > 0 %}
+            {% if pet.comment_set.exists %}
                 {% for comment in pet.comment_set.all %}
                     <div class="box">
+                        <a href="{% url 'user profile' comment.user_id %}">{{ pet.user.user.username }}</a>
                         <h5><em>{{ comment }}</em></h5>
                         <hr>
                     </div>
@@ -31,13 +41,15 @@
                     <h3>There are no comments for this pet. </h3>
                 </div>
             {% endif %}
-            <div class="box">
-                <form method="post" action="{% url 'pets details' pet.id %}">
-                    {{ form.comment }}
-                    {% csrf_token %}
-                    <button class="btn btn-primary mt-2" type="submit">Add comment</button>
-                </form>
-            </div>
+            {% if like_comment_permissions %}
+                <div class="box">
+                    <form method="post" action="{% url 'pets details' pet.id %}">
+                        {{ form.comment }}
+                        {% csrf_token %}
+                        <button class="btn btn-primary mt-2" type="submit">Add comment</button>
+                    </form>
+                </div>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
